--- a/index.html
+++ b/index.html
@@ -1,11 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Dian Mohammad - President of Blibania</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Manifesto - Dian Mohammad</title>
+<style>
+  /* Reset & body */
+  body, html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    font-family: 'Montserrat', sans-serif;
+  }
+
+  /* Background image */
+  body {
+    background: url('background.jpg') no-repeat center center fixed;
+    background-size: cover;
+  }
+
+  /* Center panel with blur */
+  .blur-panel {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.2);
+    backdrop-filter: blur(12px);
+    text-align: center;
+    padding: 40px 20px;
+  }
+
+  /* Main text */
+  .main-text {
+    font-size: 3em;
+    font-weight: bold;
+    color: #ffffff;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    margin-bottom: 40px;
+    text-shadow: 2px 2px 8px rgba(0,0,0,0.7);
+  }
+
+  /* Download button */
+  .download-button {
+    display: inline-block;
+    padding: 15px 30px;
+    background-color: #ff4d4d;
+    color: white;
+    font-weight: bold;
+    text-decoration: none;
+    border-radius: 8px;
+    font-size: 1.2em;
+    transition: background 0.3s, transform 0.2s;
+  }
+
+  .download-button:hover {
+    background-color: #e60000;
+    transform: scale(1.05);
+  }
+
+  /* Responsive adjustments */
+  @media (max-width: 600px) {
+    .main-text {
+      font-size: 2em;
+    }
+
+    .download-button {
+      font-size: 1em;
+      padding: 12px 24px;
+    }
+  }
+</style>
 </head>
 <body>
-  <h1>Welcome to the Official Site of the United States of Blibania</h1>
-  <p>All visitors are protected by Cloudflare SSL.</p>
+
+<div class="blur-panel">
+  <div class="main-text">BULLYING ENDS NOW.</div>
+  <a href="manifesto.pdf" download class="download-button">Download My Manifesto</a>
+</div>
+
 </body>
 </html>
