--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   /* Background image */
   body {
-    background: url('background.jpg') no-repeat center center fixed;
+    background: url('gettyimages-1500601245-640x640.jpg') no-repeat center center fixed;
     background-size: cover;
   }
 
