--- a/contacts/index.html
+++ b/contacts/index.html
@@ -151,7 +151,7 @@
 					<a href="https://discord.gg/47w9URZtZz"><span class="mbr-iconfont m-auto socicon-discord socicon" style="font-size: 48px;"></span></a>
 					<div class="card-box">
 						<h4 class="card-title mbr-fonts-style mb-1 display-5"><strong>Discord</strong></h4>
-						<h5 class="card-text mbr-fonts-style display-7"><a href="https://www.tiktok.com/@mobirise" class="text-success">Discord</a></h5>
+						<h5 class="card-text mbr-fonts-style display-7"><a href="" class="text-success">Discord</a></h5>
 					</div>
 				</div>
 			</div>
@@ -162,7 +162,7 @@
 						<h4 class="card-title mbr-fonts-style mb-1 display-5">
 							<strong>YouTube</strong>
 						</h4>
-						<h5 class="card-text mbr-fonts-style display-7"><a href="https://www.youtube.com/mobirise" class="text-success">Lunar</a></h5>
+						<h5 class="card-text mbr-fonts-style display-7"><a href="https://www.youtube.com/lunarcoding" class="text-success">Lunar</a></h5>
 					</div>
 				</div>
 			</div>
@@ -171,7 +171,7 @@
 					<span class="mbr-iconfont m-auto socicon-snapchat socicon"></span>
 					<div class="card-box">
 						<h4 class="card-title mbr-fonts-style mb-1 display-5"><strong>Snapchat</strong></h4>
-						<h5 class="card-text mbr-fonts-style display-7"><a href="https://twitter.com/Mobirise/" class="text-success">DianM</a></h5>
+						<h5 class="card-text mbr-fonts-style display-7"><a href="Coming Soon!" class="text-success">DianM</a></h5>
 					</div>
 				</div>
 			</div><div class="item features-without-image col-12 col-md-6 col-lg-3">
@@ -179,7 +179,7 @@
 					<span class="mbr-iconfont m-auto socicon-linkedin socicon"></span>
 					<div class="card-box">
 						<h4 class="card-title mbr-fonts-style mb-1 display-5"><strong>LinkedIn</strong></h4>
-						<h5 class="card-text mbr-fonts-style display-7"><a href="https://twitter.com/Mobirise/" class="text-success">Dian Mohammed</a></h5>
+						<h5 class="card-text mbr-fonts-style display-7"><a href="Coming Soon!" class="text-success">Dian Mohammed</a></h5>
 					</div>
 				</div>
 			</div>
