--- a/manifesto/index.html
+++ b/manifesto/index.html
@@ -60,7 +60,7 @@
 						<a class="nav-link link text-black text-primary display-4" href="contact.html">Contacts</a>
 					</li></ul>
 				
-				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-primary display-4" href="manifesto.html">Download the Manifesto</a></div>
+				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-primary display-4" href="/manifesto/">Download the Manifesto</a></div>
 			</div>
 		</div>
 	</nav>
