--- a/contacts/index.html
+++ b/contacts/index.html
@@ -50,13 +50,13 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-						<a class="nav-link link text-black text-primary display-4" href="about-me.html">About Me</a>
+						<a class="nav-link link text-black text-primary display-4" href="/about-me/">About Me</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link link text-black text-primary display-4" href="manifesto.html" aria-expanded="false">Manifesto</a>
+						<a class="nav-link link text-black text-primary display-4" href="/manifesto/" aria-expanded="false">Manifesto</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link link text-black text-primary display-4" href="contact.html">Contacts</a>
+						<a class="nav-link link text-black text-primary display-4" href="/contacts/">Contacts</a>
 					</li></ul>
 				
 				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-primary display-4" href="/manifesto/">Download the Manifesto</a></div>
